[project]
name = "ReviewAgent"
version = "0.0.6"
description = "Review Agent for Legal Documents"
authors = [{ name = "Pelin Yetis", email = "pelin.yetis@cognera.com.tr" }]
dependencies = [
    "uipath-langchain==0.0.113",
    "langchain-anthropic>=0.3.17",
    "langgraph>=0.2.70",
    "langchain-core>=0.3.34",
    "langchain-openai>=0.3.9",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.4",
    "aiohttp>=3.11.12",
    "typing-extensions>=4.12.2",
    "ipython>=8.32.0",
    "pypdf2==3.0.1",
    "reportlab>=4.2.5",
    "mcp>=1.0.0",
    "langchain-mcp>=0.2.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.11.0",
    "anyio>=4.6.0",
    "starlette>=0.39",
    "langchain-mcp-adapters>=0.1.9",
]
requires-python = ">=3.10"
